--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,14 +14,15 @@
   --color-foreground: var(--foreground);
 }
 
-@media (prefers-color-scheme: dark) {
+/* ダークモードのカラーパレットをコメントアウト */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+}*/
 
-body {
+html, body {
   background: var(--background);
   color: var(--foreground);
 }
