--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 * {
-  font-family: var(--font-noto-sans-jp), sans-serif;
+  font-family: "Noto Sans", "YakuHanJPs", "Noto Sans JP", sans-serif;
 }
 
 :root {
